# platform.core.connectivity.mtp-initiator

./: CMakeLists.txt
packaging/: 99-mtp.rules  mtp-initiator.manifest  mtp-initiator.service  mtp-initiator.sh  mtp-initiator.spec  org.tizen.mtp.conf
src/daemon/: CMakeLists.txt  gen.sh  mtp_daemon.c  mtp_daemon_controller.c  mtp_daemon_db.c  mtp_daemon_event.c  mtp_daemon_gdbus.c  mtp_daemon_gdbus_deviceinfo.c  mtp_daemon_gdbus_manager.c  mtp_daemon_gdbus_objectinfo.c  mtp_daemon_gdbus_storageinfo.c  mtp_daemon_util.c  mtp_gdbuslib.xml
src/daemon/include/: mtp_daemon.h  mtp_daemon_controller.h  mtp_daemon_db.h  mtp_daemon_event.h  mtp_daemon_gdbus.h  mtp_daemon_gdbus_deviceinfo.h  mtp_daemon_gdbus_manager.h  mtp_daemon_gdbus_objectinfo.h  mtp_daemon_gdbus_storageinfo.h  mtp_daemon_util.h
